<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITU Tour Guide</string>
    <string name="action_settings">Settings</string>
    <string name="button_location_provider_gps">Location provider : GPS</string>
    <string name="button_location_provider_network">Location provider : Network</string>
    <string name="title_activity_location_map">Location map</string>
    <string name="location_not_available_message">Location not available</string>
    <string name="title_activity_location_building">Location building</string>
    <string name="preference_user_name">Username</string>
    <string name="preference_user_email">Email</string>
    <string name="preference_server_address">Server address</string>
    <string name="preference_save">Save</string>
    <string name="change_information_button">Change information</string>
    <string name="display_map_button">Display map</string>
    <string name="label_user_name">Username :</string>
    <string name="label_email">Email :</string>
    <string name="label_bluetooth_id">Bluetooth ID :</string>
    <string name="building_text">Welcome to ITU</string>
    <string name="enter_itu_text">Enter ITU</string>
    <string name="leave_itu_text">Leave ITU</string>

</resources>