<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	<EditTextPreference android:title="@string/preference_user_name"
	    android:key="username"
	    android:dialogTitle="@string/preference_user_name"
	    android:defaultValue=""
	    android:inputType="text"
	    android:persistent="true"
	    />
	
	<EditTextPreference android:title="@string/preference_user_email"
	    android:key="email"
	    android:dialogTitle="@string/preference_user_email"
	    android:defaultValue=""
	    android:inputType="textEmailAddress"
	    android:persistent="true"
	    />
	
	<EditTextPreference android:title="@string/preference_server_address"
	    android:key="serverAddress"
	    android:dialogTitle="@string/preference_server_address"
	    android:defaultValue="http://pit.itu.dk:7331/"
	    android:inputType="textUri"
	    android:persistent="true"
	    />
	
	<Preference android:title="@string/preference_save" android:key="save" />

</PreferenceScreen>