<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/usernameTextview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/label_user_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/emailTextview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/usernameTextview"
        android:layout_below="@+id/usernameTextview"
        android:text="@string/label_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bluetoothTextview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailTextview"
        android:layout_below="@+id/emailTextview"
        android:text="@string/label_bluetooth_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/changeInformationButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameTextview"
        android:layout_centerVertical="true"
        android:text="@string/change_information_button"
        android:onClick="changeInformation" />

    <Button
        android:id="@+id/displayMapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeInformationButton"
        android:layout_below="@+id/changeInformationButton"
        android:layout_marginTop="20dp"
        android:text="@string/display_map_button"
        android:onClick="displayMap" />

</RelativeLayout>